Updates permissions and fixes minor layout bugs

--- a/src/styles/_station-list.scss
+++ b/src/styles/_station-list.scss
@@ -6,7 +6,7 @@ pvl-station-list {
 	}
 
 	.icon {
-		width: 48px;
+		width: 64px;
 		margin: 16px;
 	}
 
